// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`International billing address card renders correctly 1`] = `
<div>
  <div
    class="components-surface components-card fraud-protection-rule-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="ip-address-mismatch"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            IP Address Mismatch
          </p>
        </div>
        <div
          class="fraud-protection-rule-toggle"
        >
          <div
            class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper ej5x27r4"
          >
            <div
              class="components-base-control__field css-10urnh1-StyledField-deprecatedMarginField ej5x27r3"
            >
              <span
                class="components-form-toggle"
              >
                <input
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-0"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-toggle-control__label"
                for="inspector-toggle-control-0"
              >
                Enable IP Address Mismatch filter
              </label>
            </div>
          </div>
          <div
            class="fraud-protection-rule-toggle-description"
          >
            This filter screens for customer's 
            <a
              class="components-external-link"
              href="https://simple.wikipedia.org/wiki/IP_address"
              rel="external noreferrer noopener"
              target="_blank"
            >
              IP address
              <span
                class="components-visually-hidden css-1mm2cvy-View em57xhy0"
                data-wp-c16t="true"
                data-wp-component="VisuallyHidden"
                style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
              >
                (opens in a new tab)
              </span>
              <svg
                aria-hidden="true"
                class="components-external-link__icon css-16iaek2-StyledIcon etxm6pv0"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
                />
              </svg>
            </a>
             to see if it is in a different country than indicated in their billing address. When enabled the payment will be blocked.
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            Fraudulent transactions often use fake addresses to place orders. If the IP address seems to be in one country, but the billing address is in another, that could signal potential fraud.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`International billing address card renders correctly when enabled 1`] = `
<div>
  <div
    class="components-surface components-card fraud-protection-rule-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="ip-address-mismatch"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            IP Address Mismatch
          </p>
        </div>
        <div
          class="fraud-protection-rule-toggle"
        >
          <div
            class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper ej5x27r4"
          >
            <div
              class="components-base-control__field css-10urnh1-StyledField-deprecatedMarginField ej5x27r3"
            >
              <span
                class="components-form-toggle is-checked"
              >
                <input
                  checked=""
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-1"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-toggle-control__label"
                for="inspector-toggle-control-1"
              >
                Enable IP Address Mismatch filter
              </label>
            </div>
          </div>
          <div
            class="fraud-protection-rule-toggle-description"
          >
            This filter screens for customer's 
            <a
              class="components-external-link"
              href="https://simple.wikipedia.org/wiki/IP_address"
              rel="external noreferrer noopener"
              target="_blank"
            >
              IP address
              <span
                class="components-visually-hidden css-1mm2cvy-View em57xhy0"
                data-wp-c16t="true"
                data-wp-component="VisuallyHidden"
                style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
              >
                (opens in a new tab)
              </span>
              <svg
                aria-hidden="true"
                class="components-external-link__icon css-16iaek2-StyledIcon etxm6pv0"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
                />
              </svg>
            </a>
             to see if it is in a different country than indicated in their billing address. When enabled the payment will be blocked.
          </div>
          <div />
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            Fraudulent transactions often use fake addresses to place orders. If the IP address seems to be in one country, but the billing address is in another, that could signal potential fraud.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`International billing address card renders correctly when enabled and checked 1`] = `
<div>
  <div
    class="components-surface components-card fraud-protection-rule-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="ip-address-mismatch"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            IP Address Mismatch
          </p>
        </div>
        <div
          class="fraud-protection-rule-toggle"
        >
          <div
            class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper ej5x27r4"
          >
            <div
              class="components-base-control__field css-10urnh1-StyledField-deprecatedMarginField ej5x27r3"
            >
              <span
                class="components-form-toggle is-checked"
              >
                <input
                  checked=""
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-2"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-toggle-control__label"
                for="inspector-toggle-control-2"
              >
                Enable IP Address Mismatch filter
              </label>
            </div>
          </div>
          <div
            class="fraud-protection-rule-toggle-description"
          >
            This filter screens for customer's 
            <a
              class="components-external-link"
              href="https://simple.wikipedia.org/wiki/IP_address"
              rel="external noreferrer noopener"
              target="_blank"
            >
              IP address
              <span
                class="components-visually-hidden css-1mm2cvy-View em57xhy0"
                data-wp-c16t="true"
                data-wp-component="VisuallyHidden"
                style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
              >
                (opens in a new tab)
              </span>
              <svg
                aria-hidden="true"
                class="components-external-link__icon css-16iaek2-StyledIcon etxm6pv0"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
                />
              </svg>
            </a>
             to see if it is in a different country than indicated in their billing address. When enabled the payment will be blocked.
          </div>
          <div />
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            Fraudulent transactions often use fake addresses to place orders. If the IP address seems to be in one country, but the billing address is in another, that could signal potential fraud.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`International billing address card renders like disabled when checked, but not enabled 1`] = `
<div>
  <div
    class="components-surface components-card fraud-protection-rule-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="ip-address-mismatch"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            IP Address Mismatch
          </p>
        </div>
        <div
          class="fraud-protection-rule-toggle"
        >
          <div
            class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper ej5x27r4"
          >
            <div
              class="components-base-control__field css-10urnh1-StyledField-deprecatedMarginField ej5x27r3"
            >
              <span
                class="components-form-toggle"
              >
                <input
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-3"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-toggle-control__label"
                for="inspector-toggle-control-3"
              >
                Enable IP Address Mismatch filter
              </label>
            </div>
          </div>
          <div
            class="fraud-protection-rule-toggle-description"
          >
            This filter screens for customer's 
            <a
              class="components-external-link"
              href="https://simple.wikipedia.org/wiki/IP_address"
              rel="external noreferrer noopener"
              target="_blank"
            >
              IP address
              <span
                class="components-visually-hidden css-1mm2cvy-View em57xhy0"
                data-wp-c16t="true"
                data-wp-component="VisuallyHidden"
                style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
              >
                (opens in a new tab)
              </span>
              <svg
                aria-hidden="true"
                class="components-external-link__icon css-16iaek2-StyledIcon etxm6pv0"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
                />
              </svg>
            </a>
             to see if it is in a different country than indicated in their billing address. When enabled the payment will be blocked.
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            Fraudulent transactions often use fake addresses to place orders. If the IP address seems to be in one country, but the billing address is in another, that could signal potential fraud.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;
